objects/MW_Business_Hours__c.object
<CustomObject><fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU - Customer Support</fullName>
                </value>
                <value>
                    <fullName>AU - Install</fullName>
                </value>
                <value>
                    <fullName>AU - Sales</fullName>
                </value>
                <value>
                    <fullName>AU - Technical Support</fullName>
                </value>
                <value>
                    <fullName>BNL - Customer Support</fullName>
                </value>
                <value>
                    <fullName>BNL - Install</fullName>
                </value>
                <value>
                    <fullName>BNL - Sales</fullName>
                </value>
                <value>
                    <fullName>BNL - Technical Support</fullName>
                </value>
                <value>
                    <fullName>Business Application</fullName>
                </value>
                <value>
                    <fullName>CH - Customer Support</fullName>
                </value>
                <value>
                    <fullName>CH - Install</fullName>
                </value>
                <value>
                    <fullName>CH - Sales</fullName>
                </value>
                <value>
                    <fullName>CH - Technical Support</fullName>
                </value>
                <value>
                    <fullName>CN - Customer Support</fullName>
                </value>
                <value>
                    <fullName>CN - Install</fullName>
                </value>
                <value>
                    <fullName>CN - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>CN - Sales</fullName>
                </value>
                <value>
                    <fullName>CN - Technical Support</fullName>
                </value>
                <value>
                    <fullName>DE - Customer Support</fullName>
                </value>
                <value>
                    <fullName>DE - Install</fullName>
                </value>
                <value>
                    <fullName>DE - Sales</fullName>
                </value>
                <value>
                    <fullName>DE - Technical Support</fullName>
                </value>
                <value>
                    <fullName>EMEA - Install</fullName>
                </value>
                <value>
                    <fullName>EMEA - Sales</fullName>
                </value>
                <value>
                    <fullName>ES - Customer Support</fullName>
                </value>
                <value>
                    <fullName>ES - Install</fullName>
                </value>
                <value>
                    <fullName>ES - Sales</fullName>
                </value>
                <value>
                    <fullName>ES - Technical Support</fullName>
                </value>
                <value>
                    <fullName>FR - Customer Support</fullName>
                </value>
                <value>
                    <fullName>FR - Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Office_Name__c</fullName>
        <description>Office Location - Concatenation of Country Name and MW Office</description>
        <label>Office Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SFDC_Timezone__c</fullName>
        <description>SFDC Timezone will be join to LOV Picklist table in SFDC sql db to get offset hours</description>
        <label>SFDC Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
                <value>
                    <fullName>Asia/Calcutta</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Europe/Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Europe/Berlin</fullName>
                </value>
                <value>
                    <fullName>Europe/Brussels</fullName>
                </value>
                <value>
                    <fullName>Europe/London</fullName>
                </value>
                <value>
                    <fullName>Europe/Paris</fullName>
                </value>
                <value>
                    <fullName>Europe/Rome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Start_Time__c</fullName>
        <description>Business Office startof the day  time</description>
        <label>Start Time</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Custom table with WW Technical Support business hours and timezone by TS Area. The table will be used by BO reports .</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>MW Business Hours</label><nameField>
        <label>Office Location</label>
        <type>Text</type>
    </nameField><pluralLabel>MW Business Hours</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Timezone__c</columns>
        <columns>Area__c</columns>
        <columns>End_Time__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Office_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>